[package]
name = "rustdss_core"
version = "0.1.0"
authors = ["Peter East <petereast+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdss_data = { path = '../rustdss_data'}
rustdss_transport = { path = '../rustdss_transport'}
